# aparte

./: .travis.yml  Cargo.toml  README.md  doap.xml  guix.scm
.circleci/: config.yml
ci/: before_deploy.sh  build_docker.sh  script.sh
migrations/2022-09-23-153311_create_omemo_storage/: down.sql  up.sql
migrations/2024-02-15-141206_omemo_store/: down.sql  up.sql
src/: account.rs  async_iq.rs  color.rs  command.rs  config.rs  contact.rs  conversation.rs  core.rs  crypto.rs  cursor.rs  i18n.rs  main.rs  message.rs  terminus.rs  ui.rs  word.rs
src/mods/: bookmarks.rs  carbons.rs  completion.rs  contact.rs  conversation.rs  correction.rs  disco.rs  mam.rs  messages.rs  mod.rs  omemo.rs  ui.rs
src/plugins/: bookmarks.rs  carbons.rs  completion.rs  contact.rs  conversation.rs  disco.rs  mam.rs  mod.rs  roster.rs  ui.rs
src/storage/: mod.rs  models.rs  schema.rs
tokio-test/: Cargo.toml
tokio-test/src/: main.rs
