[package]
name = "aparte"
version = "0.2.0-alpha"
description = "Simple XMPP console client written in Rust and inspired by Profanity."
authors = ["Paul Fariello <paul@fariello.eu>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/paulfariello/aparte"

[features]
no-cursor-save = []

[dependencies]
log = "^0.4"
flexi_logger = "^0.15"
futures = "^0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-xmpp = {path = "../xmpp-rs/tokio-xmpp"}
xmpp-parsers = {path = "../xmpp-rs/xmpp-parsers"}
rpassword = "^3.0"
uuid = { version = "^0.7", features = ["v4"]  }
termion = "1.5"
derive-error = "0.0.4"
bytes = "^0.5"
dirs = "^2.0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
unicode-segmentation = "^1.6"
rand = "^0.7"
