[package]
name = "aparte"
version = "0.3.0-dev"
description = "Simple XMPP console client written in Rust and inspired by Profanity."
authors = ["Paul Fariello <paul@fariello.eu>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/paulfariello/aparte"

[features]
no-cursor-save = []
strict = []

[dependencies]
log = "^0.4"
flexi_logger = "^0.15"
backtrace = "^0.3"
futures = "^0.3"
tokio = { version = "^1.0", features = ["full"] }
tokio-xmpp = "^3.0"
xmpp-parsers = "^0.18"
rpassword = "^3.0"
uuid = { version = "^0.7", features = ["v4"]  }
termion = "1.5"
derive-error = "0.0.4"
bytes = "^0.5"
dirs = "^2.0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
unicode-segmentation = "^1.6"
rand = "^0.8"
linked_hash_set = "^0.1"
textwrap = "^0.12"
linked-hash-map = "^0.5"
rust-crypto = "^0.2"
hsluv = "^0.1"
fuzzy-matcher = "^0.3"

[dev-dependencies]
mockall = "^0.9"

[profile.release]
debug = true
