[package]
name = "aparte"
version = "0.4.0-dev"
description = "Simple XMPP console client written in Rust and inspired by Profanity."
authors = ["Paul Fariello <paul@fariello.eu>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/paulfariello/aparte"
exclude = [
    ".travis.yml",
]

[features]
no-cursor-save = []
strict = []

[dependencies]
log = "^0.4"
flexi_logger = "^0.27"
backtrace = "^0.3"
futures = "^0.3"
tokio = { version = "^1.10", features = ["full"] }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
rpassword = "^3.0"
uuid = { version = "^1.7", features = ["v4"]  }
termion = { path = "../termion/" } # "3.0.0" + d57468cdc106699585dd0fea0361998293c26574
derive-error = "0.0.4"
bytes = "^0.5"
dirs = "^2.0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
unicode-segmentation = "^1.6"
rand = "0.7.3" # same as libsignal
linked_hash_set = "^0.1"
textwrap = "^0.12"
linked-hash-map = "^0.5"
hsluv = "^0.1"
fuzzy-matcher = "^0.3"
clap = { version = "4.0.32", features = ["derive"] }
diesel = { version = "^2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "^2.0"
anyhow = "^1.0"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.20.0" }
async-trait = "0.1.41" # same as libsignal
aes-gcm = "0.10.3"
base64 = "0.21.7"
sha1 = "0.10.6"
itertools = "0.12.1"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
mockall = "^0.9"

[profile.release]
debug = true
