[package]
name = "tokio-test"
version = "0.1.0"
authors = ["Paul Fariello <paul@fariello.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
futures = "0.1"
log = "0.4"
signal-hook = { version = "0.1", features = ["tokio-support"] }
termion = "1.5"
tokio = "0.1"
tokio-codec = "0.1"
tokio-file-unix = "0.5"
tokio-xmpp = "1.0"
xmpp-parsers = "0.16"
